--- a/github-analyzator/package.json
+++ b/github-analyzator/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/bootstrap": "^4.1.2",
+    "@types/react-bootstrap": "^0.32.15",
+    "bootstrap": "^3.3.7",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
