--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/bootstrap": "^4.1.2",
     "@types/react-bootstrap": "^0.32.15",
     "@types/redux": "^3.6.0",
+    "@types/redux-immutable-state-invariant": "^2.1.0",
     "@types/redux-thunk": "^2.1.0",
     "bootstrap": "^3.3.7",
     "react": "^16.6.3",
@@ -14,6 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
