--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bootstrap": "^4.1.2",
     "@types/react-bootstrap": "^0.32.15",
+    "@types/react-redux": "^6.0.10",
     "@types/redux": "^3.6.0",
     "@types/redux-immutable-state-invariant": "^2.1.0",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "fetch": "^1.1.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
