--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fetch": "^1.1.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-charts": "^2.0.0-alpha.12",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
