--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^4.1.2",
     "@types/react-bootstrap": "^0.32.15",
+    "@types/react-icons": "^2.2.6",
     "@types/react-redux": "^6.0.10",
     "@types/redux": "^3.6.0",
     "@types/redux-immutable-state-invariant": "^2.1.0",
@@ -17,6 +18,7 @@
     "react-bootstrap": "^0.32.4",
     "react-charts": "^2.0.0-alpha.12",
     "react-dom": "^16.6.3",
+    "react-icons": "^3.2.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
