--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^4.1.2",
+    "@types/query-string": "^6.2.0",
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-icons": "^2.2.6",
     "@types/react-redux": "^6.0.10",
@@ -14,6 +15,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "fetch": "^1.1.0",
+    "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-charts": "^2.0.0-alpha.12",
