--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-charts": "^2.0.0-alpha.12",
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
+    "react-loader-spinner": "^2.3.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
