--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
     "@types/axios": "^0.14.0",
     "@types/bootstrap": "^4.1.2",
     "@types/query-string": "^6.2.0",
     "@types/react-bootstrap": "^0.32.15",
     "@types/react-icons": "^2.2.6",
     "@types/react-redux": "^6.0.10",
+    "@types/react-test-renderer": "^16.8.1",
     "@types/redux": "^3.6.0",
     "@types/redux-immutable-state-invariant": "^2.1.0",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.18.0",
+    "babel-jest": "^24.1.0",
     "bootstrap": "^3.3.7",
     "eslint": "^5.6.0",
     "fetch": "^1.1.0",
+    "jest": "^24.1.0",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
@@ -26,6 +31,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-test-renderer": "^16.8.3",
     "redux": "^4.0.1",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
@@ -35,7 +41,7 @@
     "start": "serve -s build",
     "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "lint-fix": "eslint --fix ./src",
