--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^16.6.3",
     "react-icons": "^3.2.2",
     "react-loader-spinner": "^2.3.0",
+    "react-minimal-pie-chart": "^3.5.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
